// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module Module component 1`] = `
<div
  className="component obojobo-draft--modules--module"
  data-focussed={false}
  data-id="b0c22727-16df-4f8f-9ec3-1b24109c11d7"
  data-obo-component={true}
  data-type="ObojoboDraft.Modules.Module"
  id="obo-b0c22727-16df-4f8f-9ec3-1b24109c11d7"
  role="main"
  tabIndex={-1}
>
  <div />
</div>
`;

exports[`Module Module component with child 1`] = `
<div
  className="component obojobo-draft--modules--module"
  data-focussed={false}
  data-id="b0c22727-16df-4f8f-9ec3-1b24109c11d7"
  data-obo-component={true}
  data-type="ObojoboDraft.Modules.Module"
  id="obo-b0c22727-16df-4f8f-9ec3-1b24109c11d7"
  role="main"
  tabIndex={-1}
>
  <div>
    <MockComponent
      model={
        Object {
          "getComponentClass": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": "MockComponent",
              },
            ],
          },
        }
      }
      moduleData={
        Object {
          "focusState": Object {},
          "navState": Object {},
        }
      }
    />
  </div>
</div>
`;
